# mapa-psc

./: .gitignore  CNAME  README.md  pyproject.toml  requirements.txt  run_pipeline.sh  run_sample_pipeline.sh
docs/: INSTRUCTIONS.md
src/: 01_csv2parquet.py  02_parquet2geopkg-poly.py  03_geopkg2geojson-tiles.py  config.py
web/: app.js  index.html
web/tiles/: metadata.json
web/tiles/10/546/: 345.pbf  346.pbf  347.pbf
web/tiles/10/547/: 345.pbf  346.pbf  347.pbf  348.pbf  349.pbf
web/tiles/10/548/: 344.pbf  345.pbf  346.pbf  347.pbf  348.pbf  349.pbf  350.pbf
web/tiles/10/549/: 344.pbf  345.pbf  346.pbf  347.pbf  348.pbf  349.pbf  350.pbf  351.pbf
web/tiles/10/550/: 343.pbf  344.pbf  345.pbf  346.pbf  347.pbf  348.pbf  349.pbf  350.pbf  351.pbf  352.pbf
web/tiles/10/551/: 342.pbf  343.pbf  344.pbf  345.pbf  346.pbf  347.pbf  348.pbf  349.pbf  350.pbf  351.pbf  352.pbf  353.pbf
web/tiles/10/552/: 342.pbf  343.pbf  344.pbf  345.pbf  346.pbf  347.pbf  348.pbf  349.pbf  350.pbf  351.pbf  352.pbf  353.pbf
web/tiles/10/553/: 342.pbf  343.pbf  344.pbf  345.pbf  346.pbf  347.pbf  348.pbf  349.pbf  350.pbf  351.pbf  352.pbf  353.pbf
web/tiles/10/554/: 342.pbf  343.pbf  344.pbf  345.pbf  346.pbf  347.pbf  348.pbf  349.pbf  350.pbf  351.pbf  352.pbf  353.pbf
web/tiles/10/555/: 342.pbf  343.pbf  344.pbf  345.pbf  346.pbf  347.pbf  348.pbf  349.pbf  350.pbf  351.pbf  352.pbf  353.pbf
web/tiles/10/556/: 343.pbf  344.pbf  345.pbf  346.pbf  347.pbf  348.pbf  349.pbf  350.pbf  351.pbf  352.pbf  353.pbf
web/tiles/10/557/: 343.pbf  344.pbf  345.pbf  346.pbf  (+7 more)
(+37291 files in other folders)
