[project]
name = "mapa-psc"
version = "0.1.0"
description = "Interactive map of Czech Republic ZIP codes with their border polygons calculated from RUIAN data."
readme = "README.md"
requires-python = ">=3.13.7"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "pyarrow>=14.0.0",
    "pyproj>=3.6.0",
    "alphashape>=1.3.1",
    "shapely>=2.0.0",
    "scipy>=1.11.0",
    "tippecanoe>=2.72.0",
]
